--- a/packages/flakybot/package.json
+++ b/packages/flakybot/package.json
@@ -32,6 +32,7 @@
     "@google-automations/label-utils": "^3.0.0",
     "@octokit/openapi-types": "^14.0.0",
     "@octokit/types": "^8.0.0",
+    "@types/express": "^4.17.21",
     "gcf-utils": "^14.2.0",
     "jsonwebtoken": "^9.0.0",
     "probot": "^12.2.8",
@@ -39,7 +40,7 @@
   },
   "devDependencies": {
     "@types/mocha": "^10.0.0",
-    "@types/node": "^18.7.15",
+    "@types/node": "^18.19.8",
     "@types/sinon": "^10.0.13",
     "c8": "^7.12.0",
     "cross-env": "^7.0.3",
